--- a/css/header_responsive.css
+++ b/css/header_responsive.css
@@ -21,9 +21,10 @@
 	float: left;
 	position: absolute;
 }
-.header div.mob_sub_menu_icon:hover > div.sub_menu_dropdown {
+/* Triggered by JavaScript, remove block comments below if JavaScript is not being used */
+/*.header div.mob_sub_menu_icon:hover > div.sub_menu_dropdown {
 	display: block;
-}
+}*/
 .header div.mob_sub_menu_icon {
 	width: 24px;
 	margin-top: 5px;
@@ -68,8 +69,9 @@
 	width: 120px;
 	float: right;
 }
-.header .header_account_container .nav li.mob_main_menu_icon:hover > div.main_menu_mobile_dropdown {
+/* Triggered by JavaScript, remove block comments below if JavaScript is not being used */
+/*.header .header_account_container .nav li.mob_main_menu_icon:hover > div.main_menu_mobile_dropdown {
 	display: block;
-}
+}*/
 
 }
