--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@
     margin: 0 auto;
     padding: 19px 0;
     width: 100%;
-	-moz-box-sizing: border-box;
+	/*-moz-box-sizing: border-box;*/
     background: none repeat scroll 0 0 #FFFFFF;
 	position:fixed;
 	z-index:10;
